# test

./: .gitignore  README.md  features.md  main.py  pyproject.toml
docs/: diagramas.md
salud_fisica/: __init__.py  cli.py  database.py  models.py  repositories.py  security.py  services.py
salud_fisica/api/: __init__.py  deps.py  main.py  schemas.py
tests/: test_api.py  test_sistema.py
